--- a/test-output/old/OpencartSuite/classes.html
+++ b/test-output/old/OpencartSuite/classes.html
@@ -4,15 +4,16 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>testCases.TC_004_LoginTest_RobotClass</td>
+<td>testCases.TC_001_AccountRegistrationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>test_loginRobotClass</td>
-<td>&nbsp;</td></tr>
+<td>test_account_Registration</td>
+<td>Master Regression </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
