--- a/test-output/old/OpencartSuite/methods.html
+++ b/test-output/old/OpencartSuite/methods.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>OpencartSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="61bef5">  <td>23/08/17 18:47:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCases.TC_004_LoginTest_RobotClass@290222c1]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1633013890</td>   <td></td> </tr>
-<tr bgcolor="ed7b7c">  <td>23/08/17 18:47:19</td>   <td>-4539</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_004_LoginTest_RobotClass.test_loginRobotClass()[pri:0, instance:testCases.TC_004_LoginTest_RobotClass@290222c1]">test_loginRobotClass</td> 
+<tr bgcolor="ed7b7c">  <td>23/12/17 18:58:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TC_001_AccountRegistrationTest.test_account_Registration()[pri:0, instance:testCases.TC_001_AccountRegistrationTest@290222c1]">test_account_Registration</td> 
   <td>main@1633013890</td>   <td></td> </tr>
-<tr bgcolor="61bef5">  <td>23/08/17 18:47:04</td>   <td>-18899</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.set(java.lang.String)[pri:0, instance:testCases.TC_004_LoginTest_RobotClass@290222c1]">&gt;&gt;set</td> 
+<tr bgcolor="61bef5">  <td>23/12/17 18:58:13</td>   <td>-7380</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.set(java.lang.String)[pri:0, instance:testCases.TC_001_AccountRegistrationTest@290222c1]">&gt;&gt;set</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1633013890</td>   <td></td> </tr>
+<tr bgcolor="61bef5">  <td>23/12/17 18:58:23</td>   <td>2478</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.teardown()[pri:0, instance:testCases.TC_001_AccountRegistrationTest@290222c1]">&lt;&lt;teardown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1633013890</td>   <td></td> </tr>
 </table>
